--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,1 +1,15 @@
 <h1>New User</h1>
+<form action="/users" method="post" accept-charset="UTF-8">
+  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+
+  <p><label for="username">Username:</label>
+  <input type="text" name="user[username]" id="username"></p>
+
+  <p><label for="email">Email:</label>
+  <input type="text" name="user[email]" id="email"></p>
+
+  <p><label for="password">Password:</label>
+  <input type="password" name="user[password]" id="password"></p>
+
+  <input type="submit" value="Go!">
+</form>
