--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New User</h1>
-<!--
+<!-- HTML form
 <form action="/users" method="post" accept-charset="UTF-8">
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
 
@@ -14,6 +14,8 @@
 
   <input type="submit" value="Go!">
 </form>-->
+
+<!-- form_tag
 <%= form_tag("/users", method: "post") do %>
   <p>
     <%= label_tag(:username, "Username:") %>
@@ -29,5 +31,22 @@
   </p>
   <p>
     <%= submit_tag("Go!") %>
+  </p>
+<% end %>-->
+
+<%= form_for @user do |f| %>
+  <p>
+    <%= f.label :username, "Your username here" %>
+    <%= f.text_field :username, value: "User Name" %>
+  </p>
+  <p>
+    <%= f.label :email %>:
+    <%= f.text_field :email, placeholder: "example@example.com" %>
+  </p>
+  <p>
+    <%= f.label :password %>:
+    <%= f.password_field :password %>
+  <p>
+    <%= f.submit "Go! "%>
   </p>
 <% end %>
