--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -34,6 +34,15 @@
   </p>
 <% end %>-->
 
+<% if @user.errors.any? %>
+  <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved: </h2>
+  <ul>
+  <% @user.errors.full_messages.each do |msg| %>
+    <li><%= msg %></li>
+  <% end %>
+  </ul>
+<% end %>
+
 <%= form_for @user do |f| %>
   <p>
     <%= f.label :username, "Your username here" %>
